# ecs-compositor

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
crates/codegen/: Cargo.toml
crates/codegen/src/: config.rs  generate.rs  lib.rs
crates/codegen/src/builder/: dir.rs  mod.rs
crates/codegen/src/generate/: flat_map_fn.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: lib.rs  protocols.rs  socket.rs
crates/compositor/src/socket/: buffer.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  interface.rs  lib.rs  message.rs  raw_slice.rs  wl_display.rs
crates/core/src/primitives/: array.rs  enum_.rs  fd.rs  fixed.rs  fmt.rs  int.rs  mod.rs  object.rs
crates/core/src/primitives/inner/: array.rs  enumeration.rs  fd.rs  fixed.rs  int.rs  object.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs
crates/helpers/src/tracing/: custom_formatter.rs  dbg_u64.rs  mod.rs
crates/message/: Cargo.toml
crates/message/src/: lib.rs  travel_logs.rs
crates/message/src/travel_logs/: tests.rs
crates/phasesync/: Cargo.toml  rustfmt.toml
crates/phasesync/src/: chunk_iter.rs  helpers.rs  lib.rs  position.rs
crates/phasesync/src/position/: carrying_add.rs
crates/ring-queue/: Cargo.toml  README.md
crates/ring-queue/src/: bitfield.rs  helpers.rs  lib.rs  reader.rs
crates/ring-queue/src/sync_point/: iter.rs  mod.rs
crates/wayland-tokio/: Cargo.toml  build.rs  example.bash  list_consts.bash
crates/wayland-tokio/examples/buf/: main.rs  protocols.rs
crates/wayland-tokio/src/: buffer.rs  dir.rs  drive_io.rs  handle.rs  lib.rs  msg_io.rs  poll_waker.rs  ready_fut.rs  recv.rs  send.rs
crates/wayland-tokio/src/buf/: macros.rs  mod.rs  span.rs
crates/wayland-tokio/src/buf/recv/: io.rs  mod.rs  recv_handle.rs
crates/wayland-tokio/src/connection/: mod.rs  obj.rs  ready_fut.rs  recv.rs  registry.rs  send.rs
crates/wayland-tokio/src/msg_io/: cmsg_cursor.rs
examples/apps/: Cargo.toml  build.rs
examples/apps/examples/: brightness.rs  calc.rs  dnd.rs  list_globals.rs  numbers.rs  wlr-gammastep.rs
examples/apps/resources/: brightness.xml  wayland.dtd  wlr-gammastep.service
examples/apps/src/: bind.rs  custom_formatter.rs  lib.rs  protocols.rs
examples/wayland-raw/: Cargo.toml  build.rs
examples/wayland-raw/src/: main.rs
examples/wayland-tokio/: Cargo.toml  build.rs
examples/wayland-tokio/src/: main.rs
examples/wayland-tokio/src/connection/: drive_io.rs  mod.rs  msg_io.rs  ready_fut.rs  recv.rs  send.rs
