[package]
name = "ecs-compositor-tokio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.10.0"
bstr = "1.12.0"
ecs-compositor-core.workspace = true
libc = { version = "0.2.175", features = ["extra_traits"] }
tokio = { workspace = true, features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }

[lints]
workspace = true
