[package]
name = "apps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.99"
console-subscriber = "0.4.1"
ecs-compositor-core.workspace = true
ecs-compositor-tokio.workspace = true
futures.workspace = true
libc = { version = "0.2.175", features = ["extra_traits"] }
nu-ansi-term = "0.50.3"
tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.20", features = ["json"] }

[lints]
workspace = true

[build-dependencies]
ecs-compositor-codegen.workspace = true
